# hello-world

./: .dockerignore  Dockerfile  main.py  pyproject.toml
.github/workflows/: docker-build.yml
