[project]
name = "playground-github-actions"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dmk-packages",
]

[tool.uv.sources]
dmk-packages = { git = "https://${GITHUB_TOKEN}@github.com/datamktkorea/dmk-packages.git" }
